<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="es.ibrands.popularmoviesstage1.DetailActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_title"
                android:textSize="36sp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_gravity="start"
                android:background="@color/bgMovieTitle"
                android:textColor="@color/fontMovieTitle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_detail_thumb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:contentDescription="@string/movie_thumb_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_detail_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_release_date"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/movie_detail_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_runtime"
                        android:textStyle="italic"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/movie_detail_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_vote_average"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/movie_detail_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_description"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
